# gym

./: .bumpversion.toml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build-ci.yml  eval.yml  experiment.yml  pages.yml  release.yml  test-pages.yml
docs/: _config.yml  _toc.yml  run_first.py
docs/notebooks/: bayer_challenge.ipynb  bayer_sorter.ipynb  ceviche_challenge.ipynb  diffractive_splitter.ipynb  diffractive_splitter_challenge.ipynb  library_challenge.ipynb  meta_atom_library.ipynb  metagrating_challenge.ipynb  metalens.ipynb  metalens_challenge.ipynb  photon_extractor.ipynb  photon_extractor_challenge.ipynb  sorter_challenge.ipynb
docs/notebooks/challenges/: bayer_sorter.ipynb  ceviche_challenges.ipynb  diffractive_splitter.ipynb  meta_atom_library.ipynb  metagrating.ipynb  metalens.ipynb  photon_extractor.ipynb
docs/notebooks/intro/: gym_basics.ipynb
docs/notebooks/optimization/: basic_optimization.ipynb  levelset.ipynb
notebooks/: ceviche.ipynb  ceviche_challenge.ipynb  diffract.ipynb  diffractive_splitter_challenge.ipynb  experiment_analysis.ipynb  metagrating.ipynb  metagrating_challenge.ipynb  metalens_challenge.ipynb  photon_extractor_challenge.ipynb  readme_example.ipynb  sorter_challenge.ipynb
reference_designs/bayer/: 240325_mfschubert_49ca0bd2450f982c7980208fb1fd88222c3a28694e49d205e51acf107febb17d.json  generate_design.ipynb  zou.csv
reference_designs/ceviche/mode_converter/: README.md
reference_designs/diffract/metagrating/: README.md
reference_designs/diffract/splitter/: README.md  device3.csv
reference_designs/diffractive_splitter/: 240413_mfschubert_40b6a186a2ad09fe4a4a9e8fbce60f5d38e39bf11f17102c0005612d8eb6df7b.json  240413_mfschubert_8d45bcf673d167db063065dab04b82a527a1e39e816e984c4ff3b4597ddc525a.json  240413_mfschubert_ba86cdee2ff56eb6602b30bc0a87c995d6d4924cdd06fee0e949a9da3590d789.json  README.md  device1.csv  device2.csv  device3.csv
reference_designs/extractor/: README.md
reference_designs/meta_atom_library/: 241024_mfschubert_a522d59bd3da6f788398482bf559d58ef86530bf8ed491b602087d2d64ac6c86.json  design_d1.json  design_d2.json  design_d5.json  design_d6.json  design_d7.json  generate_designs.ipynb  library1.json
reference_designs/metagrating/: 240710_mfschubert_52e918ac1c6e90bb23d24f8bb3714a582e4fe897675321a343e7fd9b48a34b07.json  240710_mfschubert_a33070d2d053e3b278056e6bcd387b552e2cd619f8096ac306c3604386b27fe1.json  240710_mfschubert_f86277871e4c38c9e6209938acee7f3c8de2cd476fd52e59a6d35e204ed81f49.json  README.md  device5.csv
reference_designs/metalens/: Mo117nm.csv  Mo180nm.csv  Mo242nm.csv  Mo86nm.csv  README.md  Rasmus123nm.csv  Rasmus209nm.csv  Rasmus256nm.csv  Rasmus70nm.csv  process_designs.ipynb
reference_designs/metalens/Ex/: Mo117nm.csv  Mo180nm.csv  Mo242nm.csv  Mo86nm.csv  Rasmus123nm.csv  Rasmus209nm.csv  Rasmus256nm.csv  Rasmus70nm.csv  invrsio_100_0.csv  invrsio_140_0.csv  invrsio_220_0.csv
reference_designs/metalens/Ez/: Mo101nm.csv  Mo195nm.csv  Mo242nm.csv  Mo70nm.csv  wenjin.csv
reference_designs/photon_extractor/: 240118_mfschubert_8569349cf4b44541ee37aa3eeed0127b70e29fb52674a4e97370fe7d95323bc7.json  240118_mfschubert_94f960998a248fbf49015f50850e5d519424e0f9cbe016bdde4c6f31c49414dc.json  README.md  device1.csv  device3.csv  device4.csv  device5.csv  extract_design.ipynb
reference_designs/photon_extractor/raw/: device2.csv
reference_designs/polarization_sorter/: device1.json
scripts/: eval.py  experiment.py
src/invrs_gym/: __init__.py
src/invrs_gym/challenge/: __init__.py
src/invrs_gym/challenges/: __init__.py  base.py
src/invrs_gym/loss/: __init__.py  transmission_loss.py  window_loss.py
src/invrs_gym/utils/: __init__.py  initializers.py  materials.py  metrics.py  optimizer.py  transforms.py
tests/: conftest.py
tests/challenges/: test_serialize.py
tests/loss/: test_transmission_loss.py  test_window_loss.py
tests/utils/: test_initializers.py  test_materials.py  test_metrics.py  test_optimizer.py  test_serialize.py  test_transforms.py
tests/utils/data/: nk_dummy.csv
(+61 files in other folders)
