[project]

name = "invrs_gym"
version = "0.0.0"
description = "A collection of inverse design challenges"
keywords = ["topology", "optimization", "jax", "inverse design"]
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}

authors = [
    {name = "Martin Schubert", email = "mfschubert@gmail.com"},
]
maintainers = [
    {name = "Martin Schubert", email = "mfschubert@gmail.com"},
]

dependencies = [
    "agjax",
    "ceviche_challenges",
    "fmmax",
    "jax",
    "jaxlib",
    "numpy",
    "totypes",
]

[project.optional-dependencies]
tests = [
    "optax",
    "parameterized",
    "pytest",
    "pytest-cov",
]
dev = [
    "bump-my-version",
    "darglint",
    "invrs_gym[tests]",
    "mypy",
    "pre-commit",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"invrs_gym" = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.pydocstyle]
inherit = false
convention = "google"

[tool.pytest.ini_options]
addopts = [
    # Allow test files to have the same name in different directories.
    "--import-mode=importlib",
]

[tool.mypy]
follow_imports = "normal"
